syntax = "proto3";

package user;

import "google/protobuf/empty.proto";

service UserService {
  rpc Create(User) returns (User);
  rpc Update(User) returns (User);
  rpc Get(GetUserReqById) returns (User);
  rpc ListUsers(ListUsersReq) returns (ListUsersResp);
  rpc Delete(DeleteUserReq) returns (google.protobuf.Empty);
  rpc CheckField(CheckFieldUserReq) returns (CheckFieldUserResp);
  rpc IfExists(IfUserExistsReq) returns (IfUserExistsResp);
  rpc ChangePassword(ChangeUserPasswordReq) returns (ChangeUserPasswordResp);
  rpc UpdateRefreshToken(UpdateRefreshTokenUserReq) returns (UpdateRefreshTokenUserResp);
}


message User {
  string id = 1;
  uint64 user_order = 2;
  string first_name = 3;
  string last_name = 4;
  string birth_date = 5;
  string phone_number = 6;
  string password = 7;
  string gender = 8;
  string refresh_token = 9;
  string created_at = 10;
  string updated_at = 11;
  string deleted_at = 12;
}

message CheckFieldUserReq {
  string value = 1;
  string field = 2;
}

message CheckFieldUserResp {
  bool status = 1;
}

message GetUserReqById {
  string user_id = 1;
}

message ChangeUserPasswordReq {
  string phone_number = 1; 
  string password = 2;
}

message ChangeUserPasswordResp {
  bool status = 1;
}

message DeleteUserReq {
  string user_id = 1;
}

message ListUsersReq {
    uint64 limit = 1;
    uint64 offset = 2;
    map<string, string> filter=3;
}

message ListUsersResp {
  repeated User users = 1;
  uint64 count = 2;
}

message IfUserExistsReq {
  string phone_number = 1;
}

message IfUserExistsResp {
  bool is_exists = 1;
}

message Empty {
  
}

message UpdateRefreshTokenUserReq {
  string id = 1;
  string refresh_token = 2;
}

message UpdateRefreshTokenUserResp {
  bool status = 1;
}
